--- a/composer/base/docker-compose-base2.yaml
+++ b/composer/base/docker-compose-base2.yaml
@@ -36,7 +36,7 @@ services:
     extra_hosts:
       - "peer0.org2.hospital.com:192.168.56.109"
       - "peer1.org2.hospital.com:192.168.56.109"
-      - "ca_peerJabar:192.168.56.109"
+      - "ca_peerOrg2:192.168.56.109"
       - "orderer.hospital.com:192.168.56.107"
     ports:
       - 7051:7051
