--- a/composer/docker-compose3.yml
+++ b/composer/docker-compose3.yml
@@ -7,7 +7,7 @@ volumes:
 services:
 
   ca1:
-    image: hyperledger/fabric-ca:1.2.1
+    image: hyperledger/fabric-ca
     environment:
       - FABRIC_CA_HOME=/etc/hyperledger/fabric-ca-server
       - FABRIC_CA_SERVER_CA_NAME=ca-org2
