--- a/composer/base/peer-base.yaml
+++ b/composer/base/peer-base.yaml
@@ -2,7 +2,7 @@ version: '2'
 
 services:
   peer-base:
-    image: hyperledger/fabric-peer:1.2.1
+    image: hyperledger/fabric-peer:latest
     environment:
       - CORE_VM_ENDPOINT=unix:///host/var/run/docker.sock
       # the following setting starts chaincode containers on the same
